Task Ver 4 - Changes

--- a/evd/web/templates/task/edit_task.html
+++ b/evd/web/templates/task/edit_task.html
@@ -263,9 +263,12 @@ color: #23527c; !important;
                                     <label><span style="color: red;">*</span>Skills</label>
                                     <select id='skillsId' name="skillsName" class="form-control">
                                         <option value="{{task.skills}}">{{task.skills}}</option>
-                                        <option value="Task 1">Task 1</option>
-                                        <option value="Task 2">Task 2</option>
-                                        <option value="Task 3">Task 3</option>
+                                        <option value="Skill 1">Carpentry</option>
+                                        <option value="Skill 2">Electrical Training</option>
+                                        <option value="Skill 3">Automotive repair</option>
+                                        <option value="Skill 4">HVAC (heating, ventilation, and air conditioning)</option>
+                                        <option value="Skill 5">Upholstery and furniture repair</option>
+                                        <option value="Skill 6">Poultry Farming</option>
                                         <!-- Add more options as needed -->
                                       </select>
                                 </div>
