--- a/evd/web/templates/task/create_task.html
+++ b/evd/web/templates/task/create_task.html
@@ -122,13 +122,13 @@ color: #23527c; !important;
                                 <div class="col-md-3 col-sm-3 col-xs-12">
                                     <label><span style="color: red;">*</span>Skills</label>
                                     <select id='skillsId' name="skillsName" class="form-control">
-                                        <option value="{{task.subject}}">{{task.skills}}</option>
-                                        <option value="Skill 1">Carpentry</option>
-                                        <option value="Skill 2">Electrical Training</option>
-                                        <option value="Skill 3">Automotive repair</option>
-                                        <option value="Skill 4">HVAC (heating, ventilation, and air conditioning)</option>
-                                        <option value="Skill 5">Upholstery and furniture repair</option>
-                                        <option value="Skill 6">Poultry Farming</option>
+                                        <option value="{{task.skills}}">{{task.skills}}</option>
+                                        <option value="Carpentry">Carpentry</option>
+                                        <option value="Electrical Training">Electrical Training</option>
+                                        <option value="Automotive repair">Automotive repair</option>
+                                        <option value="HVAC">HVAC (heating, ventilation, and air conditioning)</option>
+                                        <option value="Upholstery and furniture repair">Upholstery and furniture repair</option>
+                                        <option value="Poultry Farming">Poultry Farming</option>
                                         <!-- Add more options as needed -->
                                       </select>
                                 </div>
