--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -1392,9 +1392,16 @@
                 <li class="nav-item nav-item__has-megamenu megamenu-col-2">
                   <a class="nav-link" href="/partner/new_signup/">Partner</a>
                 </li>
-
+                {% if request.session.student %}
+                <li class="nav-item nav-item__has-megamenu megamenu-col-2">
+                  <a class="nav-link" href="/student/student_dashboard/">Student</a>
+                </li>
+                {% else %}
+                <li class="nav-item nav-item__has-megamenu megamenu-col-2">
+                  <a class="nav-link" href="" data-toggle="modal" data-target="#exampleModal">Student</a>
+                </li>
+                {% endif %}
               
-
                 <li class="nav-item nav-item__has-dropdown dropdown">
                   <a
                     class="dropdown-toggle nav-link"
@@ -1470,7 +1477,37 @@
         style="width: 100%"
       />
     </div>
-
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h2>Login</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form method="post" action="/student/student_login/">
+                  {% csrf_token %} 
+                  <div class="row">
+                    <div class="form-group col-12">
+                      <input
+                        type="number"
+                        placeholder="Mobile Number"
+                        class="form-control"
+                        name="mobile"
+                        id=""/>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-end">
+                  <button  type="submit" class="btn btn-primary" id="model2">Login</button>
+                  </div>
+                </form>
+              </div>
+              </div>
+          </div>
+        </div>
     <!--add banner-->
     <nav>
       <!-- <div >
