--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -58,7 +58,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="eVidyaloka is a non-profit organization that focuses on transforming the educational landscape of rural India. eVidyaloka creates digital classrooms for children in remote villages, with support of local communities and Volunteer Teachers across globe with standardized lesson plans and teaching aids"
+      content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. "
     />
     <meta
       name="keywords"
@@ -1905,14 +1905,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 mt-5" style="margin-left: 80px;">
-              <h4 class="h5 text-white">eVidyaloka Trust</h4>
+              <h4 class="h5 text-white">eVean Foundation</h4>
               <div class="width-3rem bg-primary height-3 mt-3"></div>
               <div class="margin-y-40">
                 <p>
                   10 B, 1st A Main, MCHS Colony 5th Block, Sector 6, HSR Layout,
                   Bangalore-560102
                 </p>
-                <p class="muted">© eVidyaloka Trust 2016</p>
+                <p class="muted">© eVean Foundation</p>
                 <p class="muted">
                   <a href="/policies_terms_conditions/">Terms of Service </a>
                 </p>
