--- a/evd/web/templates/new_base_1.html
+++ b/evd/web/templates/new_base_1.html
@@ -4,7 +4,7 @@
 
 {% block head_styles %}
     <!-- meta yet to be updated from evidyaloka -->
-    <meta name="description" content="eVidyaloka is a non-profit organization that focuses on transforming the educational landscape of rural India. eVidyaloka creates digital classrooms for children in remote villages, with support of local communities and Volunteer Teachers across globe with standardized lesson plans and teaching aids">
+    <meta name="description" content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. ">
     <meta name="keywords" content="evidyaloka, children, rural school, learn, rural education, children education, teachers, volunteers, volunteers to teach, volunteer teachers, education, student education, online teaching, digital classrooms, virtual teaching, ngo, free education, remote village education, internet education, teaching channel, sponsor for education, sponsor for school, donate for school, donate for education"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -2102,9 +2102,9 @@ font-size:18px;
                     <div class="col-lg-12">
                       <div class="col-sm-3 col-md-4">
                         <div class="footer-logo">
-                          <h3>eVidyaloka Trust</h2>
+                          <h3>eVean Foundation</h3>
                           <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
-                          <p class="muted">© eVidyaloka Trust 2016</p>
+                          <p class="muted">© eVean Foundation</p>
                           <a href="/policies_terms_conditions/">Terms of Service</a>
                           <a href="/policies/">Privacy</a>
                         </div>
