--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -1477,6 +1477,13 @@
         style="width: 100%"
       />
     </div>
+    {% if messages %}
+        {% for message in messages %}
+         {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+
+        {% endfor %}
+
+    {% endif %}
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
