--- a/evd/student/templates/evd.html
+++ b/evd/student/templates/evd.html
@@ -1,5 +1,5 @@
 {% extends 'student_base.html' %}
-
+{% block head_title %}StudentDashboard{% endblock %}
 {% block body_container %}
 
 <link href='https://cdn.jsdelivr.net/npm/fullcalendar@3.10.5/dist/fullcalendar.min.css' rel='stylesheet' />
@@ -8,77 +8,190 @@
 <!-- <script src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script> -->
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@3.10.5/dist/fullcalendar.min.js'></script>
 
-
 <style>
 #calendar {
-  max-width: 800px;
-  border: 2px solid #bdbdbd;
-  margin-top: 20px;
+  max-width: 800px; 
+  margin-top: 0px;
 }
 .head-running{
-  /* padding: 10px 5px; */
   color: #f15a22;
   font-weight: bold;
   font-size: 14px;
+  padding-left: 1%;
 
 }
-.running{
-  border-bottom: 1px solid #F3D6CB;
-  border-radius: 4px;
-
-}
-
 .calender-border{
 max-width:800px;
-border: 1px solid #bdbdbd;
 border-radius: 4px;
-padding-top:10px;
 margin-left: 90px;
 margin-top: 150px;
 }
-
 .note-box{
 width:800px;
-height: 400px;
-border: 1px solid #bdbdbd;
 border-radius: 4px;
-margin-left: 90px;
-margin-top: 10px;
+border:1px solid #bebebe;
+background-color:#f9f9f9;
+}
+.assigned-offering{
+  padding: 2%;
+  background-color: #f9f9f9;
+  border-top:1px solid #f3d6cb;
+}
+.fc-head {
+  background-color:#a9ce92;
+  color: green;
+  font-size: medium;
+  
+}
+.fc-body{
+  background-color: #e7e9e7;
+}
+.fc-unthemed  .fc-unthemed .fc-divider, .fc-unthemed .fc-list-heading td, .fc-unthemed .fc-list-view, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead {
+    border-color: #7dc18c;
+}
+.fc-content{
+  color: #fff;
+  font-weight: bold;
+  background-color: #3da5b3;;
+  font-size: larger;
+}
+.modals-menus{
+  margin-top: 10px;
+}
+a {
+  color: #1ab188; 
+}
+body {
+  font-family: 'Open Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 </style>
-
-
-<div class="calender-border">
-<div style="padding-left:8px;">
-<h4><b>eVidyaloka {{student.center}}</b></h4>
-<h5>Student Name : {{student.name}}</h5>
-<h5>Medium : {{student.school_medium_lng}}</h5>
-</div>
-<div id="calendar"></div>
-</div>
-<span id="pleawait">Please Wait....</span>
-<div class="note-box">
-  <div class="running">
-    <h3 class="head-running">Running Courses</h3>
-  </div>       
-  <div class="assigned-offering">
-      <ul id="#runnning-courses" class="cycle">
-        <li>
-          <span>               
-            {{course.grade}}th {{course.subject}}, {{offerings.start_date}} to {{offerings.end_date}}
-          </span>
-          <br>        
-          <div>
-            <a href="/student/student_ask_doubt/" class="tag">Ask Doubts</a>
-            <!-- <a href="" data-toggle="modal" data-target="#myModal"class="tag">Duobt Model</a> -->
-            <a href="/student/list_studentdoubts/" class="tag">View Doubts</a>
-            <!-- <a href="/student/assignment_upload/" class="tag">Upload Assignments</a> -->
-          </div>
-        </li>
-      </ul>
+{% if messages %}
+  <ul class="messages" style="color: rgb(214, 12, 12); text-align: center;">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+  </ul>
+{% endif %}
+<div style="display: flex; background-color: #f0f0f0; margin-bottom: 50px; padding-bottom: 150px; padding-left: 100px;">
+  <div class="calender-border">
+    <div style="padding-left:8px; background-color: rgb(142, 188, 50); color: white;border: 1px solid #bdbdbd;text-align: center;">
+      <h4><b>TIME TABLE </b></h4>
+    </div>
+    <div id="calendar"></div>
+      <div class="note-box">
+        <div class="running">
+          <h3 class="head-running">Running Courses</h3>
+        </div>       
+        <div class="assigned-offering">
+          <ul id="#runnning-courses" class="cycle">
+            <li>
+              <span>               
+                {{course.grade}}th {{course.subject}}, ({{offerings.id}}), {{offerings.start_date|date:"d"}}th {{offerings.start_date|date:"M, Y"}} to {{offerings.end_date|date:"d"}}th {{offerings.end_date|date:"M, Y"}}
+              </span>
+              <br>
+              <div class="modals-menus">
+                <a href="/student/student_ask_doubt/" class="tag">Ask Doubts</a>
+                <a href="/student/list_studentdoubts/" class="tag">View Doubts</a>
+                <!-- <a class="tag" data-toggle="modal" data-target="#exampleModalCenter">Ask doubt modal</a> -->
+              </div>
+              <div class="modals-menus"> 
+                <!-- <a href="/v2/offering/topic-details/?center_id={{ offerings.center.id }}&offering_id={{ offerings.id }}&ayfy_id={{ ay_id }}" class="tag" target="_blank">My Content Reference</a>
+                <a href="/student/assignment_upload/" class="tag">Upload Assignments</a>
+                <a href="/student/uploded_assignments/" class="tag">My Assignments</a>
+                <a href="/student/my_appreciations/" class="tag">My Appreciations</a> -->
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </div>
+  <span id="pleawait">Please Wait....</span>
+  <div class="col-md-3">
+    <div class="dashboard-calendar-container" style="border:1px solid black; background-color: #f8f8f8; margin:150px 0px 1px 0px; padding-bottom: 0px;width:95%;">
+      <table class="table" style="font-size: 12px;width:100%;border-collapse:separate ;">
+        <tr>
+          <th colspan="3" class="center_info" style="border-top: 1px solid rgb(142, 188, 50);border-left: 1px solid rgb(142, 188, 50);background-color:#8ebc32 ;color: #fff;text-align: center;font-weight: bold;font-size: 17px;">
+            <b>Class Delivery Helpline</b>
+          </th>
+        </tr>
+        <tr>
+          <td width="30%" ><b>E-mail ID</b></td>
+          <td colspan="2" width="80%">classdelivery@evidyaloka.org</td>
+        </tr>
+        <tr>
+          <td width="30%" ><b>Phone</b></td>
+          <td colspan="2" width="80%">080-47091716</td>
+        </tr>
+      </table>
+    </div>
+    <br><br><br>
+    <div class="dashboard-calendar-container" style="border:1px solid black; background-color: #f8f8f8;padding-bottom: 0px;width:95%;">
+      <table class="table" style="font-size: 12px;width:100%;border-collapse:separate ;">
+        <tr>
+          <th colspan="3" class="center_info" style="border-top: 1px solid rgb(142, 188, 50);border-left: 1px solid rgb(142, 188, 50);background-color: #8ebc32;color: #fff;text-align: center;font-weight: bold;font-size: 17px;">
+            <b>Student Information</b>
+          </th>
+        </tr>
+        <tr>
+          <td width="30%" ><b>Center</b></td>
+          <td colspan="2" width="80%">{{ offerings.center.name }}</td>
+        </tr>
+        <tr>
+          <td width="30%" ><b>Map Location</b></td>
+          <td colspan="2" width="80%">
+            {% if map_location_link %}
+              <a target="_blank" onclick="window.open('{{map_location_link}}')" style="cursor: pointer;">&nbsp;<img src='/static/images/map_icon.jpg' alt="map" style="color:white;width:30px;height:25px;"></img></a>
+            {% else %}
+              <a target="_blank" onclick="locationNotFound();" style="cursor: pointer;">&nbsp;<img src='/static/images/map_icon.jpg' alt="map" style="color:white;width:30px;height:25px;"></img></a>
+            {% endif %}
+            {% if center.photo %}
+              <img class="img-circle" src="/{{offerings.center.photo}}" style="width:50px !important;height: 50px !important;  border-radius:50%;">
+            {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <td width="20%" >
+            <b>Student Id</b>
+          </td>
+          <td colspan="2"width="80%" >{{student.id}}</td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Name</b></td>
+          <td colspan="2" width="80%"> {{student.name}}   &nbsp; &nbsp;   </td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Phone</b></td>
+          <td colspan="2" width="80%"> {{student.phone}} &nbsp; &nbsp;   </td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Academic Year</b></td>
+          <td colspan="2" width="80%">{{offerings.academic_year}} &nbsp; &nbsp;   </td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Medium</b></td>
+          <td colspan="2" width="80%">{{student.school_medium_lng}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ donor.phone }}</td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Partner</b></td>
+          <td colspan="2" width="80%">{{ student.enrolled_by }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Board</b></td>
+          <td colspan="2" width="80%">{{ course.board_name }}</td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Teacher</b></td>
+          <td colspan="2" width="80%">{{ offerings.active_teacher.first_name }} {{ offerings.active_teacher.last_name }}-{{ offerings.active_teacher.id }}</td>
+        </tr>
+        <tr>
+          <td width="30%"><b>Teacher</b></td>
+          <td colspan="2" width="80%">{{ offerings.center.digital_school_partner }}</td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
-</div>
+
 <!-- Event Modal -->
 <div class="modal fade" id="exampleModalToggle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -89,103 +202,75 @@ margin-top: 10px;
         </button>
       </div>
       <div class="modal-body">
-        <h3>Hello {{student}}</h3>
+        <h3>Hello {{student}} join your '{{course.subject}}' class</h3>
       </div>
       <div class="modal-footer" id="linkhref">
         <!-- <a class="btn btn-primary" id="alinkhref" href="#">Open second modal</a> -->
-        
-      </div>
-
-      </div>
-  </div>
-</div>
-<!-- Event Modal End -->
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">
-          &times;
-        </button>
-      </div>
-      <div class="modal-body">
-        <form
-          method="post"
-          action="/student/student_ask_doubt/"
-          enctype="multipart/form-data"
-        >
-          <h2>Ask Doubt</h2>
-          <div>
-            <span style="color: #ffa500"><strong>Student Name:</strong></span>
-          </div>
-          <div>
-            <span style="color: #ffa500"
-              ><strong>Planned Topics:</strong>
-            </span>
-            <select
-              id="topics"
-              class="form-control"
-              name="topics"
-              required
-            >
-              <option value="">---Select the Topic---</option>
-            </select>
-          </div>
-          <div>
-            <span style="color: orange"><strong>SubTopic :</strong> </span>
-            <select
-              id="subtopics"
-              class="form-control"
-              name="subtopics"
-            >
-              <option value="">---Select the Subtopic---</option>
-            </select>
-          </div>
-          <div class="h-12 w-96">
-            <label for="imgInp">Select Image(Only png, jpg):</label>
-            <input accept=".png, .jpg" type="file" id="imgInp" />
-          </div>
-          <div class="">
-            <label for="text">Doubt Text:</label>
-            <textarea
-              id="text"
-              class="form-control"
-              name="text"
-              placeholder="Doubt Text"
-              rows="2"
-              required
-            ></textarea>
-          </div>
-
-          <div
-            class="col-lg-12 col-md-12 col-sm-12"
-            style="padding-top: 16px; padding-bottom: 16px"
-          >
-            <button
-              type="submit"
-              class="btn btn-success"
-              onclick="postDoubt()"
-            >
-              Post Doubt
-            </button>
-          </div>
-        </form>
-        <div class="w-1/4 flex items-center justify-center my-4">
-          <img
-            class="w-96 h-96 bg-no-repeat bg-center"
-            id="blah"
-            src="#"
-            alt=""
-          />
-        </div>
       </div>
     </div>
   </div>
 </div>
+<!-- Event Modal End -->
+<!-- post model -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Ask Doubt</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="post" action="/student/student_ask_doubt/"  enctype="multipart/form-data" >
+          {% csrf_token %}
+          <h4 style="padding-left: 15%; padding-bottom: 2%; "><strong>Ask Doubt </strong> </h4>
+              <div style="padding: 1%;">
+                <span style="color:#ffa500"><strong>Student Name:</strong></span>
+                  <b style="padding-left: 2%;">{{student.id}} -- {{student.name}}</b>
+              </div>
+          <div style="padding: 1%;">
+            <span style="color:#ffa500"><strong>Planned Topics:</strong> </span>
+              <select id="topics" class="form-control" style="width:100%" name="topics" required>
+                <option value="" >---Select the Topic---</option>
+                {% for topic in topics %}
+                    <option id="{{ topic.id }}" value="{{ topic.id }}" style="background-color:rgb(132, 252, 121);">{{topic.id}}-{{ topic }}</option>
+                {% endfor %}
+              </select> 
+          </div>
+          <div style="padding: 1%;">
+            <span style="color:orange"><strong>SubTopic :</strong> </span>
+              <select id="subtopics" class="form-control" name="subtopics" style="width:100%" >
+                  <option  value="">---Select the Subtopic---</option>
+              </select>
+          </div>
+              <!-- <div style="width: 40%; padding: 1%;">
+                  <label style="color:#ffa500" >Select Image(Only png, jpg):</label>
+                  <input type='file' id="file" class="form-control"  name='file' required=""/>
+              </div> -->
+              <div class="h-12 w-96">
+                <label for="imgInp" class="text-gray-700 font-bold">Select Image(Only png, jpg):</label>
+                <input accept=".png, .jpg" type='file' name="file" id="imgInp" />
+              </div>
+              <div style="width: 40%; padding: 1%;">
+                  <label for="text"  style="color:#ffa500">Doubt Text:</label>
+                  <textarea id="text" class="form-control" name='text' placeholder="Doubt Text" rows="2" required></textarea>
+              </div>
+  
+  
+          <div class="col-lg-12 col-md-12 col-sm-12" style="padding-top:16px; padding-bottom:16px;">
+              <button type="submit" class="btn btn-success" onclick="postDoubt()">Post Doubt</button>
+          </div>
+      </form>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div> -->
+    </div>
+  </div>
 </div>
-
+<!-- post model end -->
 <script>
 $(document).ready(function () {
 ShowFullCalendar(1);
@@ -195,16 +280,24 @@ $('#calendar').fullCalendar({
   defaultView: 'agendaFourDay',
   minTime: "08:00:00",
   maxTime: "20:00:00",
-  header: {
-    left: 'prev,next today',
+  customButtons: {
+    myCustomButton: {
+      text: 'custom!',
+      click: function() {
+        alert('title');
+      }
+    }
+  },
+  header:{
+    left:   'prev,next today',
     center: 'title',
-    right: 'agendaDay,agendaFourDay'
+    right: 'month,agendaFourDay,agendaDay'  
   },
   views: {
     agendaFourDay: {
       type: 'agenda',
       duration: { days: 7 },
-      buttonText: 'week'
+      buttonText: 'week',
     }
   },
   events: function (start, end, timezone, callback) {
@@ -241,7 +334,6 @@ $('#calendar').fullCalendar({
       $.ajax({
         type: "POST",
         headers: {
-
           'csrfmiddlewaretoken': '{{ csrf_token }}',
         },
         url: '/student/getSessionId/',
@@ -253,14 +345,4 @@ $('#calendar').fullCalendar({
 }
 </script>
 
-
 {% endblock body_container %}
-
-
-
-
-
-
-
-
-
