--- a/evd/student/templates/verify_otp.html
+++ b/evd/student/templates/verify_otp.html
@@ -13,6 +13,13 @@
           <div class="modal-body">
             <h3 class="text-center">Enter OTP</h3>
             <br>
+            {% if messages %}
+            <ul class="messages" style="color: rgb(214, 12, 12); text-align: center;">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             <form method="post" action="/student/student_verify_otp/">
               {% csrf_token %}
               <input type="text" placeholder="Enter OTP" class="form-control" name="otp" />
